# rustretrogames

./: Cargo.toml  README.md  setup_hooks.sh
src/: app.rs  lib.rs  main.rs  view.rs  view_model.rs
src/bots/snake/: mod.rs  random_bot.rs  snake_bot.rs
src/deep/: layer.rs  linear.rs  mod.rs  mse.rs  relu.rs  sequential.rs
src/models/snake/: mod.rs  snake_bot.rs  snake_game.rs  snake_model.rs  snake_player.rs
src/models/snake/bots/: dql_bot.rs  killer_bot.rs  mod.rs  move_to_closest_apple_bot.rs  random_snake_bot.rs
src/rl/: double_dql.rs  dql_model.rs  dqn_model.rs  environment.rs  mod.rs  q_learning.rs
src/view_models/snake/: mod.rs  snake_selection_view_model.rs  snake_view_model.rs
src/views/: home.rs  mod.rs  pong.rs  snake.rs  sudoku.rs
src/views/pac_man/: mod.rs  pac_man_home.rs
src/views/pong/: mod.rs  pong_home.rs
src/views/snake/: mod.rs  snake_game_screen.rs  snake_home.rs  snake_mediator.rs  snake_selection_screen.rs
src/views/sudoku/: mod.rs  sudoku_home.rs
trained_models/: plot_log_file.py  training_logs_2025-11-26_00-29-27.txt
