[package]
name = "rustretrogames"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
chrono = "0.4"
log = "0.4.26"
env_logger = "0.11.7"
iced = { version = "0.13.1", features = ["async-std"] }
rand = "0.8.5"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11.0"
